[gd_scene load_steps=32 format=2]

[ext_resource path="res://Sprites/bocetos y animaciones pero en azul.png" type="Texture" id=1]
[ext_resource path="res://Objects/Player/companion-AnimatedSprite.gd" type="Script" id=2]
[ext_resource path="res://Objects/Player/companionTemplate.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 24.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 180, 30, 36 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 30, 180, 30, 36 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 60, 180, 30, 36 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 144, 30, 36 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 30, 144, 30, 36 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 72, 30, 36 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 30, 72, 30, 36 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 60, 72, 30, 36 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 90, 72, 30, 36 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 120, 72, 30, 36 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 150, 72, 30, 36 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 180, 72, 30, 36 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 210, 72, 30, 36 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 30, 36 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 30, 0, 30, 36 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 60, 0, 30, 36 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 90, 0, 30, 36 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 30, 36 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 30, 36 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 0, 36, 30, 36 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 30, 36, 30, 36 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 60, 36, 30, 36 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 90, 36, 30, 36 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 270, 108, 30, 36 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "0-fall",
"speed": 18.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "0-jump",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 8 ) ],
"loop": false,
"name": "0-basicAttack",
"speed": 18.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "0-idle",
"speed": 10.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "0-walk",
"speed": 8.0
}, {
"frames": [ SubResource( 26 ) ],
"loop": true,
"name": "0-hurt",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 12, 20 )

[node name="companionTemplate" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource( 3 )

[node name="hurtBox" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtBox"]
modulate = Color( 0.537255, 0, 0.529412, 1 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
z_index = 1
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -4 )
scale = Vector2( 2, 2 )
frames = SubResource( 27 )
animation = "0-hurt"
playing = true
script = ExtResource( 2 )

[node name="punchLhit" type="Area2D" parent="AnimatedSprite"]

[node name="golpe" type="CollisionShape2D" parent="AnimatedSprite/punchLhit"]
modulate = Color( 1, 0, 0.560784, 1 )
position = Vector2( 8, -2 )
shape = SubResource( 28 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="colFloor" type="RayCast2D" parent="."]
position = Vector2( -16, 32 )
rotation = -1.55334
enabled = true
cast_to = Vector2( 0, 23 )

[node name="colRight" type="RayCast2D" parent="."]
position = Vector2( 16, 32 )
rotation = 0.0349066
enabled = true
cast_to = Vector2( 0, -48 )

[node name="colLeft" type="RayCast2D" parent="."]
position = Vector2( -16, 32 )
rotation = 3.10669
enabled = true
cast_to = Vector2( 0, 48 )

[node name="leftEye_D" type="RayCast2D" parent="."]
modulate = Color( 0.313726, 1, 0, 1 )
position = Vector2( -40, 0 )
enabled = true

[node name="upperEye_R" type="RayCast2D" parent="."]
modulate = Color( 0.313726, 1, 0, 1 )
position = Vector2( 48, -72 )
enabled = true
cast_to = Vector2( 0, -64 )

[node name="upperEye_L" type="RayCast2D" parent="."]
modulate = Color( 0.313726, 1, 0, 1 )
position = Vector2( -48, -72 )
enabled = true
cast_to = Vector2( 0, -64 )

[node name="upperEye_U" type="RayCast2D" parent="."]
modulate = Color( 0, 1, 0.576471, 1 )
position = Vector2( 0, -32 )
enabled = true
cast_to = Vector2( 0, -64 )

[node name="rightEye_D" type="RayCast2D" parent="."]
modulate = Color( 0.313726, 1, 0, 1 )
position = Vector2( 40, 0 )
enabled = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="jumpTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="jumpTimer" to="." method="_on_jumpTimer_timeout" flags=6]
